--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+niaarm = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
