--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,21 @@
 [tool.poetry]
 name = "tinynarm"
-version = "0.2.0"
+version = "0.2.1"
 description = "Simplify numerical association rule mining"
 authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
-keywords = ['association rule mining', 'data science', 'numerical association rule mining']
+keywords = ['association rule mining', 'data science', 'numerical association rule mining', 'tinyML']
 homepage = "https://gitlab.com/firefly-cpp/tinynarm"
 repository = "https://gitlab.com/firefly-cpp/tinynarm"
 readme = "README.md"
 
 include = [
     { path="LICENSE", format="sdist" },
+    { path="CITATION.cff", format="sdist" },
 ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-niaarm = "^0.3.1"
+niaarm = "^0.3.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
